# CI2024_project-work

./: gp_results_log.txt  my_solution.ipynb  problem_0.txt  problem_1.txt  problem_2.txt  problem_3.txt  problem_6.txt  pyproject.toml  s333044.py  symreg.ipynb  tree_solution.ipynb
data_text/: problem_4.txt  problem_5.txt  problem_7.txt  problem_8.txt
src/: README.md  gp_results_log.txt  symbolic_reg_code.py
src/gxgp/: __init__.py  gp_common.py  gp_dag.py  node.py  utils.py
symreg/: demo-gxgp.ipynb  mine_symreg.ipynb  single_file_sol.py  symreg.ipynb
symreg/gxgp/: __init__.py  draw.py  gp_common.py  gp_dag.py  node.py  utils.py
