[tool.poetry]
name = "ci-project-work"
version = "0.1.0"
description = "final project of the computational intelligence course"
authors = ["Adriano De Cesare <adriano.decesare@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
tqdm = "^4.67.1"
icecream = "^2.1.4"
notebook = "^7.4.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.7"
networkx = "^3.4.2"
pydot = "^4.0.0"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
