[tool.poetry]
name = "ci-project-work"
version = "0.1.0"
description = "final project of the computational intelligence course"
authors = ["Scrivane"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
tqdm = "^4.67.1"
icecream = "^2.1.4"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
